swapping to new class

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -167,7 +167,16 @@ h5 {
   align-self: start;
   justify-items: center;
 }
-.item-wrapper:first-child .service-title {
+/* .item-wrapper:first-child .service-title {
+  position: relative;
+  left: calc(
+    -1 * calc(
+        calc(50px + (85.218 - 50) * calc(calc(100vw - 375px) / (767 - 375))) -
+        calc(35px + (65.4 - 35) * calc((100vw - 375px) / (767 - 375)))
+      ) / 2
+  );
+} */
+.first-v {
   position: relative;
   left: calc(
     -1 * calc(
@@ -176,13 +185,6 @@ h5 {
       ) / 2
   );
 }
-/* .first-v {
-  position: relative;
-  left: calc(-1*((63.344px + (107.953 - 63.344) * ((100vw - 375px)/(767 - 375))) -
-          (35px + (65.4 - 35) * ((100vw - 375px) / (767 - 375)))
-      ) / 2
-  );
-} */
 
 .item-wrapper:nth-child(4) .service-title {
   position: relative;
