--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,16 +1,16 @@
 body {
   font-family: "Montserrat", sans-serif !important;
-  margin:0;
+  margin: 0;
 }
 body::-webkit-scrollbar {
   display: none;
 }
 
 img {
-  margin-bottom:0;
+  margin-bottom: 0;
 }
 form {
-  margin-bottom:0;
+  margin-bottom: 0;
 }
 .section {
   height: 50vh;
@@ -21,7 +21,7 @@ form {
   display: grid;
   grid-template-columns: 20% auto 14.6667%;
   grid-template-rows: minmax(0, 20%) auto minmax(0, 22.94%) auto minmax(0, 40%);
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
 .purple-section {
   background-color: #100540;
@@ -42,8 +42,8 @@ h1 {
   margin-bottom: 0;
   grid-column: 2;
   grid-row: 4;
-  line-height:1.5;
-  box-sizing:border-box;
+  line-height: 1.5;
+  box-sizing: border-box;
 }
 .section-2 {
   grid-template-rows: auto;
@@ -167,36 +167,16 @@ h5 {
   align-self: start;
   justify-items: center;
 }
-/* .item-wrapper:first-child .service-title {
-  position: relative;
-  left: calc(
-    -1 * calc(
-        calc(50px + (85.218 - 50) * calc(calc(100vw - 375px) / (767 - 375))) -
-        calc(35px + (65.4 - 35) * calc((100vw - 375px) / (767 - 375)))
-      ) / 2
-  );
-} */
-.first-v {
-  position: relative;
-  left: calc(
-    -1 * calc(
-        calc(50px + (85.218 - 50) * calc(calc(100vw - 375px) / (767 - 375))) -
-        calc(35px + (65.4 - 35) * calc((100vw - 375px) / (767 - 375)))
-      ) / 2
-  );
-}
-
-/* .item-wrapper:nth-child(4) .service-title {
+.item-wrapper:first-child .service-title {
   position: relative;
   left: calc(
     -1 * (
-        (63.344px + (107.953 - 63.344) * ((100vw - 375px) / (767 - 375))) -
+        (50px + (85.218 - 50) * ((100vw - 375px) / (767 - 375))) -
           (35px + (65.4 - 35) * ((100vw - 375px) / (767 - 375)))
       ) / 2
   );
-} */
-
-.forth-v {
+}
+.item-wrapper:nth-child(4) .service-title {
   position: relative;
   left: calc(
     -1 * (
@@ -206,7 +186,7 @@ h5 {
   );
 }
 
-/* .item-wrapper:nth-child(3) .service-title {
+.item-wrapper:nth-child(3) .service-title {
   position: relative;
   left: calc(
     (
@@ -214,18 +194,7 @@ h5 {
           (35px + (65.4 - 35) * ((100vw - 375px) / (767 - 375)))
       ) / 2
   );
-} */
-
-.third-v {
-  position: relative;
-  left: calc(
-    (
-        78.578px +(133.922 - 78.578) * calc(calc(100vw - 375px) / calc(767 - 375)) -
-          calc(35px + calc(65.4 - 35) * ((100vw - 375px) / (767 - 375)))
-      ) / 2
-  );
 }
-
 .item-wrapper:nth-child(6) .service-title {
   position: relative;
   left: calc(
@@ -276,7 +245,7 @@ h5 {
   grid-row: 2;
   justify-self: start;
   font-size: calc(13.84px + (28.31 - 13.84) * ((100vw - 375px) / (767 - 375)));
-  line-height:1.5;
+  line-height: 1.5;
 }
 .line-bottom {
   border: solid 1px white;
@@ -385,7 +354,7 @@ h5 {
   .section-2 {
     display: grid;
     grid-template-columns: minmax(0, 11.77%) 52.083% auto;
-    grid-template-rows: auto; 
+    grid-template-rows: auto;
   }
   .image-section-center {
     display: grid;
@@ -433,6 +402,9 @@ h5 {
     color: #100540;
     font-weight: 600;
   }
+  .service-title{
+    font-size: calc(12.8px + (32 - 12.8) * ((100vw - 768px) / (1920 - 768)));
+  }
   .section-3 .line {
     border: 1px solid #100540;
     width: calc(
@@ -441,6 +413,37 @@ h5 {
   }
   .section-3 .image-wrapper {
     background-color: #100540;
+    border: none;
+    border-radius: calc(
+      (64.4px + (161 - 64.4) * ((100vw - 678px) / (1920 - 678)))/2
+    );
+    display: flex;
+    width: calc((64.4px + (161 - 64.4) * ((100vw - 678px) / (1920 - 678))));
+    height: calc(
+      (64.4px + (161 - 64.4) * ((100vw - 678px) / (1920 - 678)))
+    );
+  }
+
+  .item-wrapper:first-child .service-title {
+    position: relative;
+    left: -0.264em;
+    left: calc(0.02em + (-0.264 - 0.02) * ((100vw - 678px) / (1920 - 678)));
+  }
+  .item-wrapper:nth-child(4) .service-title {
+    position: relative;
+    left: -1.005em;
+    left: calc(-1*(0.73em + (1.005 - 0.73) * ((100vw - 678px) / (1920 - 678))));
+  }
+
+  .item-wrapper:nth-child(3) .service-title {
+    position: relative;
+    left: 1.849em;
+    left: calc(1.7em + (1.849 - 1.7) * ((100vw - 678px) / (1920 - 678)));
+  }
+  .item-wrapper:nth-child(6) .service-title {
+    position: relative;
+    left: 0.4655em;
+    left: calc(64.4px + (0.4655 - 64.4) * ((100vw - 678px) / (1920 - 678)));
   }
 
   .section-4 {
